--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,9 +6,18 @@
   box-sizing: border-box;
 }
 
-body {
-  min-width: 320px;
+:where(body) {
   font-family: sans-serif;
+}
+
+body {
+  min-width: 640px;
   font-size: 18px;
   line-height: 2;
+  background-color: #7194af;
+}
+
+h2 {
+  margin-top: 1em;
+  margin-bottom: 0.6em;
 }
